# Hack1

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-iris-emulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-iris-emulation/checklists/: requirements.md
specs/001-iris-emulation/contracts/: iris_message_schema.json  remediation_command_schema.json  tool_response_schema.json
src/: __init__.py
src/agents/: __init__.py
src/models/: __init__.py  base.py  config.py  exceptions.py  iris_message.py  logging.py  message_generation_request.py  protocols.py  remediation_command.py  schema_validators.py  tool_result.py  tracing.py  workflow_trace.py
src/prompts/: __init__.py
src/tools/: __init__.py  file_transport.py  http_transport.py
tests/contract/: test_message_generator_contract.py
